# mailing-list-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: mailing-list-cli-skill.md
docs/: email-cli-gap-analysis.md  release.md  subscriber-integration.md
docs/handoffs/: 2026-04-08-session-2-handoff.md  2026-04-08-session-3-handoff.md  2026-04-08-session-handoff.md  2026-04-09-session-4-handoff.md  2026-04-09-session-5-planning-handoff.md  2026-04-09-session-6-handoff.md  2026-04-09-session-8-handoff.md
docs/plans/: 2026-04-07-phase-1-foundations.md  2026-04-08-phase-3-contacts-tags-fields-segments.md  2026-04-08-phase-4-templates.md  2026-04-08-phase-5-broadcasts.md  2026-04-08-phase-6-webhooks-reports.md  2026-04-09-phase-10-v0.3.2-emergency-hardening-round-2.md  2026-04-09-phase-9-v0.3.1-emergency-hardening.md  2026-04-09-v0.4-operator-superpowers.md  2026-07-19-v0.5-deliverability-guard.md
docs/specs/: 2026-04-07-mailing-list-cli-design.md  2026-04-09-v0.3.2-emergency-hardening-round-2.md
src/: cli.rs  config.rs  csv_import.rs  email_cli.rs  main.rs  models.rs
src/broadcast/: batch.rs  pipeline.rs
src/commands/: agent_info.rs  broadcast.rs  contact.rs  field.rs  health.rs  list.rs  mod.rs  report.rs  segment.rs  skill.rs  template.rs  unsubscribe.rs  webhook.rs
src/db/: migrations.rs  mod.rs
src/segment/: ast.rs  compiler.rs  grammar.pest  mod.rs  parser.rs
src/template/: compile.rs  design.rs  frontmatter.rs  lint.rs  mod.rs  render.rs  subst.rs
src/webhook/: dispatch.rs  mod.rs  poll.rs
tests/: cli.rs
tests/fixtures/: stub-email-cli.sh
web/: .env.example  .vercelignore  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/health/: route.ts
web/app/api/inquiries/: route.ts
web/app/api/unsubscribes/: route.ts
web/app/components/: ContactForm.tsx
web/app/u/[token]/: route.ts
web/lib/: config.ts  db.ts  http.ts  unsubscribe-token.ts
